--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <title>Привет, Vue</title>
+    <title>Выборы</title>
 </head>
 <body>
     <div id="app" class="container">
-        <h1>Введите 2 числа и выберите операцию</h1>
-        <form class="form-inline">
-            <input v-model.number="a" class="form-control">
-            <select v-model="operator" class="form-control">
-                <option>+</option>
-                <option>-</option>
-                <option>*</option>
-                <option>/</option>
-            </select>
-            <input v-model.number="b" class="form-control">
-        </form>
-        <h2>Результат: {{a}} {{operator}} {{b}} = {{c}}</h2>
-        <pre>{{ $data }}</pre>     
+        <h1>Люди Vue</h1>
+        <ul class="list-group">
+            <li v-for="(candidate, index) in candidates" :key="index" class="list-group-item">
+                {{candidate.name}} {{candidate.votes}}
+                <button type="button" class="btn btn-default" @click="candidate.votes++">Голосовать</button>
+            </li>
+        </ul>
+        <input @keyup.delete="clear" class="form-control" placeholder="press 'delete' to reset">
+        <h2>Наш мэр — {{mayor.name}}!</h2>
+        <pre>{{ $data }}</pre>
+        <pre>{{ mayor }}</pre>
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
@@ -29,22 +27,27 @@
     new Vue({
         el: '#app',
         data: {
-            a: 1,
-            b: 2,
-            operator: '+'
+            candidates: [
+                { name: 'Мистер Черный', votes: 152 },
+                { name: 'Мистер Розовый', votes: 147 },
+                { name: 'Мистер Белый', votes: 135 },
+                { name: 'Мистер Коричневый', votes: 130 },
+            ]
         },
         computed: {
-            c: function (event) {
-                switch (this.operator) {
-                    case '+':
-                        return this.a + this.b
-                    case '-':
-                        return this.a - this.b
-                    case '*':
-                        return this.a * this.b
-                    case '/':
-                        return this.a / this.b
-                }
+            mayor: function () {
+                var candidatesSorted = this.candidates.sort(function (a, b) {
+                    return b.votes - a.votes
+                })
+                return candidatesSorted[0]
+            }
+        },
+        methods: {
+            clear: function () {
+                this.candidates = this.candidates.map(function (candidate) {
+                    candidate.votes = 0;
+                    return candidate;
+                })
             }
         }
     })
